Правки разметки барбершопа
Добавил заглушки у картинок, переделал форму в catalog, изменил
заголовки и объеденил маленькие изображения в div  в catalog-item

--- a/catalog-item.html
+++ b/catalog-item.html
@@ -8,7 +8,7 @@
     <header class="main-header">
       <div class="container">
         <div class="main-logo">
-          <img src=""  width="" height="" alt="Barbershop">
+          <img src="http://placehold.it/111x23"  alt="Barbershop">
         </div>
         <nav class="main-navigation">
           <ul>
@@ -25,7 +25,7 @@
       </div>
     </header>
     <main class="container">     
-      <h2>Набор для путешествий «Baxter of California»</h2>
+      <h1>Набор для путешествий «Baxter of California»</h1>
       <nav class="breadcrumbs">
         <ul>
           <li><a href="#">Главная</a></li>
@@ -35,10 +35,12 @@
         </ul>
       </nav>
       <div class="item-photos">
-        <img src="" width="" height="" alt="big-photo">
-        <img src="" width="" height="" alt="first-small-photo">
-        <img src="" width="" height="" alt="second-small-photo">
-        <img src="" width="" height="" alt="third-small-photo">
+        <img src="http://placehold.it/460x498" alt="big-photo">
+        <div class="item-photos-small">
+					<img src="http://placehold.it/140x149" alt="first-small-photo">
+					<img src="http://placehold.it/140x149" alt="second-small-photo">
+					<img src="http://placehold.it/140x149" alt="third-small-photo">
+        </div>
       </div>
       <div class="item-features">
         <div class="order-info">
@@ -52,7 +54,7 @@
           <a class="btn" href="#">Купить</a>
         </article>
         <section class="item-kit">
-          <h3>В набор входят:</h3>
+          <h2>В набор входят:</h2>
           <ul>
               <li>Средство для умывания (50 мл)</li>
               <li>Увлажняющий крем (50 мл)</li>
