--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
     <header class="main-header">
       <div class="container">
         <div class="main-logo">
-          <img src=""  width="" height="" alt="Barbershop">
+          <img src="http://placehold.it/111x23"   alt="Barbershop">
         </div>
         <nav class="main-navigation">
           <ul>
@@ -33,10 +33,10 @@
           <li><a href="#">Средства для ухода</a></li>
         </ul>
       </nav>     
-      <div class="features">
-        <section class="item-producers">
-          <h2>Производители</h2>
-          <form  action="" method="">
+      <div class="features">        
+      	<form  action="" method="">        
+         	<fieldset>
+           	<legend>Производители:</legend>
             <input type="checkbox" id="first-producer" name="first-producer" checked>
             <label for="first-producer">Baxter of California</label>
             <input type="checkbox" id="second-producer" name="second-producer">
@@ -48,69 +48,67 @@
             <input type="checkbox" id="fifth-producer" name="fifth-producer">
             <label for="fifth-producer">Murray's</label>
             <input type="checkbox" id="sixth-producer" name="sixth-producer" checked>
-            <label for="sixth-producer">American Crew</label>
-          </form>
-        </section>
-        <section class="item-groups">
-          <h2>Группы товаров:</h2>
-          <form  action="" method="">
-            <input type="checkbox" id="first-group" name="first-group">
-            <label for="first-group">Бритвенные принадлежности</label>
-            <input type="checkbox" id="second-group" name="second-group" checked>
-            <label for="second-group">Средства для ухода</label>
-            <input type="checkbox" id="third-group" name="third-group">
-            <label for="third-group">Аксессуары</label>
-          </form>
-        </section>
-        <a class="btn" href="#">Показать</a>
-      </div>
+            <label for="sixth-producer">American Crew</label>				
+          </fieldset>                              
+					<fieldset>
+						<legend>Группы товаров:</legend>
+						<input type="radio" id="first-group" name="groups" value="shaping accesories">
+						<label for="first-group">Бритвенные принадлежности</label>
+						<input type="radio" id="second-group" name="groups" value="goods for the care">
+						<label for="second-group">Средства для ухода</label>
+						<input type="radio" id="third-group" name="groups" value="accesories">
+						<label for="third-group">Аксессуары</label>
+					</fieldset>
+					<a href="#">Показать</a>						
+				</form>
+			</div>
       <div class="content">
         <article class="item">
-          <img src="" width="" height="" alt="first-item">
+          <img src="http://placehold.it/220x165"  alt="first-item">
           <h3>Набор для путешествий «Baxter of California»</h3>
           <div class="item-price" href="#">2900 руб.</div>
           <a class="btn" href="#">Купить</a>
         </article>
         <article class="item">
-          <img src="" width="" height="" alt="second-item">
+          <img src="http://placehold.it/220x165"  alt="second-item">
           <h3>Увлажняющий кондиционер «Baxter of California»</h3>
           <div class="item-price" href="#">750 руб.</div>
           <a class="btn" href="#">Купить</a>
         </article> 
         <article class="item">
-          <img src="" width="" height="" alt="third-item">
+          <img src="http://placehold.it/220x165" alt="third-item">
           <h3>Гель для волос «SUAVECITO»</h3>
           <div class="item-price" href="#">290 руб.</div>
           <a class="btn" href="#">Купить</a>
         </article> 
         <article class="item">
-          <img src="" width="" height="" alt="fourth-item">
+          <img src="http://placehold.it/220x165" alt="fourth-item">
           <h3>Глина для укладки волос «American crew»</h3>
           <div class="item-price" href="#">500 руб.</div>
           <a class="btn" href="#">Купить</a>
         </article> 
         <article class="item">
-          <img src="" width="" height="" alt="fifth-item">
+          <img src="http://placehold.it/220x165" alt="fifth-item">
           <h3>Гель для волос «AMERICAN CREW</h3>
           <div class="item-price" href="#">300 руб.</div>
           <a class="btn" href="#">Купить</a>
         </article> 
         <article class="item">
-          <img src="" width="" height="" alt="sixth-item">
+          <img src="http://placehold.it/220x165" alt="sixth-item">
           <h3>Набор для бритья
 «Baxter of California»</h3>
           <div class="item-price" href="#">3900 руб.</div>
           <a class="btn" href="#">Купить</a>
         </article> 
-      </div>
-      <div class="slider">
-        <ul>
-          <li><a href="#">1</a></li>
-          <li><a href="#">2</a></li>
-          <li><a href="#">3</a></li>
-          <li><a href="#">4</a></li>
-        </ul>
-      </div>
+        <div class="pagination">
+					<ul>
+						<li><a href="#">1</a></li>
+						<li><a href="#">2</a></li>
+						<li><a href="#">3</a></li>
+						<li><a href="#">4</a></li>
+					</ul>
+      	</div>
+     </div>
     </main>
     <footer class="main-footer">
       <div class="container">
