Добавление photo в img, стилей для body и заголовков
Столкнулся с тем, что заголовок h2 index.html совпадает с h1  и не
совпадает с h2 catalog-item.html.
Поэтому переименовал h2 в h3 и прописал для него тоже стиль

--- a/catalog-item.html
+++ b/catalog-item.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Барбершоп</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="main-header">
       <div class="container">
         <div class="main-logo">
-          <img src="http://placehold.it/111x23"  alt="Barbershop">
+          <img src="img/Logo.png" width="111" height="13"   alt="Barbershop">
         </div>
         <nav class="main-navigation">
           <ul>
@@ -35,11 +36,11 @@
         </ul>
       </nav>
       <div class="item-photos">
-        <img src="http://placehold.it/460x498" alt="big-photo">
+        <img src="img/big-item-photo.jpg" width="460" height="498" alt="big-photo">
         <div class="item-photos-small">
-					<img src="http://placehold.it/140x149" alt="first-small-photo">
-					<img src="http://placehold.it/140x149" alt="second-small-photo">
-					<img src="http://placehold.it/140x149" alt="third-small-photo">
+					<img src="img/small-item-photo-1.jpg" width="140" height="149" alt="first-small-photo">
+					<img src="img/small-item-photo-2.jpg" width="140" height="149" alt="second-small-photo">
+					<img src="img/small-item-photo-3.jpg" width="140" height="149" alt="third-small-photo">
         </div>
       </div>
       <div class="item-features">
@@ -54,7 +55,7 @@
           <a class="btn" href="#">Купить</a>
         </article>
         <section class="item-kit">
-          <h2>В набор входят:</h2>
+          <h3>В набор входят:</h3>
           <ul>
               <li>Средство для умывания (50 мл)</li>
               <li>Увлажняющий крем (50 мл)</li>
@@ -75,9 +76,9 @@
         </section>
         <section class="footer-social">
           <p>Давайте дружить!</p>
-          <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
-          <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
-          <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+          <a class="social-btn social-btn-vk" href="#"><img src="img/vk-icon.png" width="25" height="15" alt=""></a>
+          <a class="social-btn social-btn-fb" href="#"><img src="img/fb-icon.png" width="25" height="15" alt=""></a>
+          <a class="social-btn social-btn-inst" href="#"><img src="img/inst-icon.png" width="25" height="15" alt=""></a>
         </section>
         <section class="footer-copyright">
           <p>Разработано:</p>
