--- a/catalog.html
+++ b/catalog.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Барбершоп «Бородинский": Каталог</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="main-header">
       <div class="container">
         <div class="main-logo">
-          <img src="http://placehold.it/111x23"   alt="Barbershop">
+          <img src="img/Logo.png" width="111" height="13"   alt="Barbershop">
         </div>
         <nav class="main-navigation">
           <ul>
@@ -64,37 +65,37 @@
 			</div>
       <div class="content">
         <article class="item">
-          <img src="http://placehold.it/220x165"  alt="first-item">
+          <img src="img/product-photo-1.jpg" width="220" height="165" alt="first-item">
           <h3>Набор для путешествий «Baxter of California»</h3>
           <div class="item-price" href="#">2900 руб.</div>
           <a class="btn" href="#">Купить</a>
         </article>
         <article class="item">
-          <img src="http://placehold.it/220x165"  alt="second-item">
+          <img src="img/product-photo-2.jpg" width="220" height="165" alt="second-item">
           <h3>Увлажняющий кондиционер «Baxter of California»</h3>
           <div class="item-price" href="#">750 руб.</div>
           <a class="btn" href="#">Купить</a>
         </article> 
         <article class="item">
-          <img src="http://placehold.it/220x165" alt="third-item">
+          <img src="img/product-photo-3.jpg" width="220" height="165" alt="third-item">
           <h3>Гель для волос «SUAVECITO»</h3>
           <div class="item-price" href="#">290 руб.</div>
           <a class="btn" href="#">Купить</a>
         </article> 
         <article class="item">
-          <img src="http://placehold.it/220x165" alt="fourth-item">
+          <img src="img/product-photo-4.jpg" width="220" height="165" alt="fourth-item">
           <h3>Глина для укладки волос «American crew»</h3>
           <div class="item-price" href="#">500 руб.</div>
           <a class="btn" href="#">Купить</a>
         </article> 
         <article class="item">
-          <img src="http://placehold.it/220x165" alt="fifth-item">
+          <img src="img/product-photo-5.jpg" width="220" height="165" alt="fifth-item">
           <h3>Гель для волос «AMERICAN CREW</h3>
           <div class="item-price" href="#">300 руб.</div>
           <a class="btn" href="#">Купить</a>
         </article> 
         <article class="item">
-          <img src="http://placehold.it/220x165" alt="sixth-item">
+          <img src="img/product-photo-6.jpg" width="220" height="165" alt="sixth-item">
           <h3>Набор для бритья
 «Baxter of California»</h3>
           <div class="item-price" href="#">3900 руб.</div>
@@ -120,9 +121,9 @@
         </section>
         <section class="footer-social">
           <p>Давайте дружить!</p>
-          <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
-          <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
-          <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+          <a class="social-btn social-btn-vk" href="#"><img src="img/vk-icon.png" width="25" height="15" alt=""></a>
+          <a class="social-btn social-btn-fb" href="#"><img src="img/fb-icon.png" width="25" height="15" alt=""></a>
+          <a class="social-btn social-btn-inst" href="#"><img src="img/inst-icon.png" width="25" height="15" alt=""></a>
         </section>
         <section class="footer-copyright">
           <p>Разработано:</p>
