Первый этап построения сетки
-поменял разметочку заодно, сделал сетку двух страниц

--- a/catalog.html
+++ b/catalog.html
@@ -7,11 +7,11 @@
   </head>
   <body>
     <header class="main-header">
-      <div class="container">
+      <div class="container clearfix">
         <div class="main-logo">
           <img src="img/Logo.png" width="111" height="13"   alt="Barbershop">
         </div>
-        <nav class="main-navigation">
+        <nav class="main-navigation second-page-nav">
           <ul>
             <li><a href="#">Информация</a></li>
             <li><a href="#">Новости</a></li>
@@ -20,13 +20,13 @@
             <li><a href="#">Контакты</a></li>
           </ul> 
         </nav>
-        <div class="login-block">
+        <div class="user-block">
           <a class="login" href="#">Вход</a>
         </div>
       </div>
     </header>
-    <main class="container">      
-      <h2>Средства для ухода</h2>
+    <main class="container clearfix">      
+      <h1>Средства для ухода</h1>
       <nav class="breadcrumbs">
         <ul>
           <li><a href="#">Главная</a></li>
@@ -34,9 +34,9 @@
           <li><a href="#">Средства для ухода</a></li>
         </ul>
       </nav>     
-      <div class="features">        
+      <div class="product-features">        
       	<form  action="" method="">        
-         	<fieldset>
+          <fieldset>
            	<legend>Производители:</legend>
             <input type="checkbox" id="first-producer" name="first-producer" checked>
             <label for="first-producer">Baxter of California</label>
@@ -51,68 +51,68 @@
             <input type="checkbox" id="sixth-producer" name="sixth-producer" checked>
             <label for="sixth-producer">American Crew</label>				
           </fieldset>                              
-					<fieldset>
-						<legend>Группы товаров:</legend>
-						<input type="radio" id="first-group" name="groups" value="shaping accesories">
-						<label for="first-group">Бритвенные принадлежности</label>
-						<input type="radio" id="second-group" name="groups" value="goods for the care">
-						<label for="second-group">Средства для ухода</label>
-						<input type="radio" id="third-group" name="groups" value="accesories">
-						<label for="third-group">Аксессуары</label>
-					</fieldset>
-					<a href="#">Показать</a>						
-				</form>
-			</div>
-      <div class="content">
+          <fieldset>
+            <legend>Группы товаров:</legend>
+            <input type="radio" id="first-group" name="groups" value="shaping accesories">
+            <label for="first-group">Бритвенные принадлежности</label>
+            <input type="radio" id="second-group" name="groups" value="goods for the care">
+            <label for="second-group">Средства для ухода</label>
+            <input type="radio" id="third-group" name="groups" value="accesories">
+            <label for="third-group">Аксессуары</label>
+          </fieldset>
+          <input type="submit" value="Показать">						
+        </form>
+      </div>
+      <div class="content clearfix">
         <article class="item">
           <img src="img/product-photo-1.jpg" width="220" height="165" alt="first-item">
-          <h3>Набор для путешествий «Baxter of California»</h3>
+          <h2>Набор для путешествий «Baxter of California»</h2>
           <div class="item-price" href="#">2900 руб.</div>
           <a class="btn" href="#">Купить</a>
         </article>
         <article class="item">
           <img src="img/product-photo-2.jpg" width="220" height="165" alt="second-item">
-          <h3>Увлажняющий кондиционер «Baxter of California»</h3>
+          <h2>Увлажняющий кондиционер «Baxter of California»</h2>
           <div class="item-price" href="#">750 руб.</div>
           <a class="btn" href="#">Купить</a>
         </article> 
-        <article class="item">
+        <article class="item no-margin">
           <img src="img/product-photo-3.jpg" width="220" height="165" alt="third-item">
-          <h3>Гель для волос «SUAVECITO»</h3>
+          <h2>Гель для волос «SUAVECITO»</h2>
           <div class="item-price" href="#">290 руб.</div>
           <a class="btn" href="#">Купить</a>
         </article> 
         <article class="item">
           <img src="img/product-photo-4.jpg" width="220" height="165" alt="fourth-item">
-          <h3>Глина для укладки волос «American crew»</h3>
+          <h2>Глина для укладки волос «American crew»</h2>
           <div class="item-price" href="#">500 руб.</div>
           <a class="btn" href="#">Купить</a>
         </article> 
         <article class="item">
           <img src="img/product-photo-5.jpg" width="220" height="165" alt="fifth-item">
-          <h3>Гель для волос «AMERICAN CREW</h3>
+          <h2>Гель для волос «AMERICAN CREW</h2>
           <div class="item-price" href="#">300 руб.</div>
           <a class="btn" href="#">Купить</a>
         </article> 
-        <article class="item">
+        <article class="item no-margin">
           <img src="img/product-photo-6.jpg" width="220" height="165" alt="sixth-item">
-          <h3>Набор для бритья
-«Baxter of California»</h3>
+          <h2>Набор для бритья
+«Baxter of California»</h2>
           <div class="item-price" href="#">3900 руб.</div>
           <a class="btn" href="#">Купить</a>
         </article> 
         <div class="pagination">
-					<ul>
+		    	<ul>
 						<li><a href="#">1</a></li>
 						<li><a href="#">2</a></li>
 						<li><a href="#">3</a></li>
 						<li><a href="#">4</a></li>
-					</ul>
+					</ul>			
       	</div>
      </div>
     </main>
     <footer class="main-footer">
-      <div class="container">
+      <div class="container clearfix">
         <section class="footer-contacts">
           Барбершоп «Бородинский»<br>
           Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
