--- a/catalog-item.html
+++ b/catalog-item.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header class="main-header">
-      <div class="container">
+      <div class="container clearfix">
         <div class="main-logo">
           <img src="img/Logo.png" width="111" height="13"   alt="Barbershop">
         </div>
@@ -25,7 +25,7 @@
         </div>
       </div>
     </header>
-    <main class="container">     
+    <main class="container clearfix">     
       <h1>Набор для путешествий «Baxter of California»</h1>
       <nav class="breadcrumbs">
         <ul>
@@ -44,18 +44,18 @@
         </div>
       </div>
       <div class="item-features">
-        <div class="order-info">
+        <div class="order-info clearfix">
           <span class="item-existance">Есть в наличие</span>
           <span class="item-article">Артикул: DEXTER-AE</span>
         </div>
         <article class="item-description">
           <p>Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.
           </p>
-          <div class="item-price">2900 руб.</div>
-          <a class="btn" href="#">Купить</a>
+          <div class="item-price inline">2900 руб.</div>
+          <div class="btn inline"><a href="#">Купить</a></div>
         </article>
         <section class="item-kit">
-          <h3>В набор входят:</h3>
+          <h2>В набор входят:</h2>
           <ul>
               <li>Средство для умывания (50 мл)</li>
               <li>Увлажняющий крем (50 мл)</li>
@@ -67,7 +67,7 @@
       </div>     
     </main>
     <footer class="main-footer">
-      <div class="container">
+      <div class="container clearfix">
         <section class="footer-contacts">
           Барбершоп «Бородинский»<br>
           Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
