--- a/catalog.html
+++ b/catalog.html
@@ -37,28 +37,32 @@
       <div class="product-features">        
       	<form  action="" method="">        
           <fieldset>
-           	<legend>Производители:</legend>
-            <input type="checkbox" id="first-producer" name="first-producer" checked>
-            <label for="first-producer">Baxter of California</label>
-            <input type="checkbox" id="second-producer" name="second-producer">
-            <label for="second-producer">Mr Natty</label>
-            <input type="checkbox" id="third-producer" name="third-producer" checked>
-            <label for="third-producer">Suavecito</label>
-            <input type="checkbox" id="fourth-producer" name="fourth-producer">
-            <label for="fourth-producer">Malin+Goetz</label>
-            <input type="checkbox" id="fifth-producer" name="fifth-producer">
-            <label for="fifth-producer">Murray's</label>
-            <input type="checkbox" id="sixth-producer" name="sixth-producer" checked>
-            <label for="sixth-producer">American Crew</label>				
+          	<ul>
+							<legend>Производители:</legend>
+							<li><input type="checkbox" id="first-producer" name="first-producer" checked>
+							<label for="first-producer">Baxter of California</label></li>
+							<li><input type="checkbox" id="second-producer" name="second-producer">
+							<label for="second-producer">Mr Natty</label></li>
+							<li><input type="checkbox" id="third-producer" name="third-producer" checked>
+							<label for="third-producer">Suavecito</label></li>
+							<li><input type="checkbox" id="fourth-producer" name="fourth-producer">
+							<label for="fourth-producer">Malin+Goetz</label></li>
+							<li><input type="checkbox" id="fifth-producer" name="fifth-producer">
+							<label for="fifth-producer">Murray's</label></li>
+							<li><input type="checkbox" id="sixth-producer" name="sixth-producer" checked>
+							<label for="sixth-producer">American Crew</label></li>
+            </ul>		
           </fieldset>                              
           <fieldset>
-            <legend>Группы товаров:</legend>
-            <input type="radio" id="first-group" name="groups" value="shaping accesories">
-            <label for="first-group">Бритвенные принадлежности</label>
-            <input type="radio" id="second-group" name="groups" value="goods for the care">
-            <label for="second-group">Средства для ухода</label>
-            <input type="radio" id="third-group" name="groups" value="accesories">
-            <label for="third-group">Аксессуары</label>
+           <ul>
+							<legend>Группы товаров:</legend>
+							<li><input type="radio" id="first-group" name="groups" value="shaping accesories">
+							<label for="first-group">Бритвенные принадлежности</label></li>
+							<li><input type="radio" id="second-group" name="groups" value="goods for the care">
+							<label for="second-group">Средства для ухода</label></li>
+							<li><input type="radio" id="third-group" name="groups" value="accesories">
+							<label for="third-group">Аксессуары</label></li>
+            </ul>
           </fieldset>
           <input type="submit" value="Показать">						
         </form>
@@ -67,39 +71,39 @@
         <article class="item">
           <img src="img/product-photo-1.jpg" width="220" height="165" alt="first-item">
           <h2>Набор для путешествий «Baxter of California»</h2>
-          <div class="item-price" href="#">2900 руб.</div>
-          <a class="btn" href="#">Купить</a>
+          <div class="item-price inline" href="#">2900 руб.</div>
+          <div class="btn inline"><a href="#">Купить</a></div>
         </article>
         <article class="item">
           <img src="img/product-photo-2.jpg" width="220" height="165" alt="second-item">
           <h2>Увлажняющий кондиционер «Baxter of California»</h2>
-          <div class="item-price" href="#">750 руб.</div>
-          <a class="btn" href="#">Купить</a>
+          <div class="item-price inline" href="#">750 руб.</div>
+          <div class="btn inline"><a href="#">Купить</a></div>
         </article> 
         <article class="item no-margin">
           <img src="img/product-photo-3.jpg" width="220" height="165" alt="third-item">
           <h2>Гель для волос «SUAVECITO»</h2>
-          <div class="item-price" href="#">290 руб.</div>
-          <a class="btn" href="#">Купить</a>
+          <div class="item-price inline" href="#">290 руб.</div>
+          <div class="btn inline"><a href="#">Купить</a></div>
         </article> 
         <article class="item">
           <img src="img/product-photo-4.jpg" width="220" height="165" alt="fourth-item">
           <h2>Глина для укладки волос «American crew»</h2>
-          <div class="item-price" href="#">500 руб.</div>
-          <a class="btn" href="#">Купить</a>
+          <div class="item-price inline" href="#">500 руб.</div>
+          <div class="btn inline"><a href="#">Купить</a></div>
         </article> 
         <article class="item">
           <img src="img/product-photo-5.jpg" width="220" height="165" alt="fifth-item">
           <h2>Гель для волос «AMERICAN CREW</h2>
-          <div class="item-price" href="#">300 руб.</div>
-          <a class="btn" href="#">Купить</a>
+          <div class="item-price inline" href="#">300 руб.</div>
+          <div class="btn inline"><a href="#">Купить</a></div>
         </article> 
         <article class="item no-margin">
           <img src="img/product-photo-6.jpg" width="220" height="165" alt="sixth-item">
           <h2>Набор для бритья
 «Baxter of California»</h2>
-          <div class="item-price" href="#">3900 руб.</div>
-          <a class="btn" href="#">Купить</a>
+          <div class="item-price inline" href="#">3900 руб.</div>
+          <div class="btn inline"><a href="#">Купить</a></div>
         </article> 
         <div class="pagination">
 		    	<ul>
