--- a/catalog-item.html
+++ b/catalog-item.html
@@ -6,12 +6,12 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <header class="main-header">
-      <div class="container clearfix">
+    <header class="second-header">
+      <div class="container">
         <div class="main-logo">
           <img src="img/Logo.png" width="111" height="13"   alt="Barbershop">
         </div>
-        <nav class="main-navigation">
+        <nav class="main-navigation next-page-navigation">
           <ul>
             <li><a href="#">Информация</a></li>
             <li><a href="#">Новости</a></li>
@@ -25,7 +25,7 @@
         </div>
       </div>
     </header>
-    <main class="container clearfix">     
+    <main class="container">     
       <h1>Набор для путешествий «Baxter of California»</h1>
       <nav class="breadcrumbs">
         <ul>
@@ -36,7 +36,9 @@
         </ul>
       </nav>
       <div class="item-photos">
-        <img src="img/big-item-photo.jpg" width="460" height="498" alt="big-photo">
+        <div class="item-photo-small">
+        	<img src="img/big-item-photo.jpg" width="460" height="498" alt="big-photo">
+				</div>
         <div class="item-photos-small">
 					<img src="img/small-item-photo-1.jpg" width="140" height="149" alt="first-small-photo">
 					<img src="img/small-item-photo-2.jpg" width="140" height="149" alt="second-small-photo">
@@ -44,14 +46,14 @@
         </div>
       </div>
       <div class="item-features">
-        <div class="order-info clearfix">
+        <div class="order-info">
           <span class="item-existance">Есть в наличие</span>
           <span class="item-article">Артикул: DEXTER-AE</span>
         </div>
         <article class="item-description">
           <p>Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.
           </p>
-          <div class="item-price inline">2900 руб.</div>
+          <div class="item-price">2900 руб.</div>
           <div class="btn inline"><a href="#">Купить</a></div>
         </article>
         <section class="item-kit">
