--- a/catalog.html
+++ b/catalog.html
@@ -4,14 +4,15 @@
     <meta charset="utf-8">
     <title>Барбершоп «Бородинский": Каталог</title>
     <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
   </head>
   <body>
-    <header class="main-header">
+    <header class="second-header">
       <div class="container clearfix">
         <div class="main-logo">
-          <img src="img/Logo.png" width="111" height="13"   alt="Barbershop">
+          <img src="img/logo.png" width="111" height="24"   alt="Barbershop">
         </div>
-        <nav class="main-navigation second-page-nav">
+        <nav class="main-navigation next-page-navigation">
           <ul>
             <li><a href="#">Информация</a></li>
             <li><a href="#">Новости</a></li>
@@ -25,95 +26,104 @@
         </div>
       </div>
     </header>
-    <main class="container clearfix">      
-      <h1>Средства для ухода</h1>
+    <main class="container catalog-main">      
+      <h1 class="catalog-h1">Средства для ухода</h1>
       <nav class="breadcrumbs">
         <ul>
           <li><a href="#">Главная</a></li>
           <li><a href="#">Магазин</a></li>
           <li><a href="#">Средства для ухода</a></li>
         </ul>
-      </nav>     
-      <div class="product-features">        
-      	<form  action="" method="">        
-          <fieldset>
-          	<ul>
+      </nav>
+      <div class="content clearfix">    
+				<div class="product-features">        
+					<form  action="" method="">        
+						<fieldset>
 							<legend>Производители:</legend>
-							<li><input type="checkbox" id="first-producer" name="first-producer" checked>
-							<label for="first-producer">Baxter of California</label></li>
-							<li><input type="checkbox" id="second-producer" name="second-producer">
-							<label for="second-producer">Mr Natty</label></li>
-							<li><input type="checkbox" id="third-producer" name="third-producer" checked>
-							<label for="third-producer">Suavecito</label></li>
-							<li><input type="checkbox" id="fourth-producer" name="fourth-producer">
-							<label for="fourth-producer">Malin+Goetz</label></li>
-							<li><input type="checkbox" id="fifth-producer" name="fifth-producer">
-							<label for="fifth-producer">Murray's</label></li>
-							<li><input type="checkbox" id="sixth-producer" name="sixth-producer" checked>
-							<label for="sixth-producer">American Crew</label></li>
-            </ul>		
-          </fieldset>                              
-          <fieldset>
-           <ul>
+							<input type="checkbox" id="first-producer" name="first-producer" checked>
+							<label for="first-producer">Baxter of California</label>
+							<input type="checkbox" id="second-producer" name="second-producer">
+							<label for="second-producer">Mr Natty</label>
+							<input type="checkbox" id="third-producer" name="third-producer" checked>
+							<label for="third-producer">Suavecito</label>
+							<input type="checkbox" id="fourth-producer" name="fourth-producer">
+							<label for="fourth-producer">Malin+Goetz</label>
+							<input type="checkbox" id="fifth-producer" name="fifth-producer">
+							<label for="fifth-producer">Murray's</label>
+							<input type="checkbox" id="sixth-producer" name="sixth-producer" checked>
+							<label for="sixth-producer">American Crew</label>
+						</fieldset>                              
+						<fieldset>       
 							<legend>Группы товаров:</legend>
-							<li><input type="radio" id="first-group" name="groups" value="shaping accesories">
-							<label for="first-group">Бритвенные принадлежности</label></li>
-							<li><input type="radio" id="second-group" name="groups" value="goods for the care">
-							<label for="second-group">Средства для ухода</label></li>
-							<li><input type="radio" id="third-group" name="groups" value="accesories">
-							<label for="third-group">Аксессуары</label></li>
-            </ul>
-          </fieldset>
-          <input type="submit" value="Показать">						
-        </form>
-      </div>
-      <div class="content clearfix">
-        <article class="item">
-          <img src="img/product-photo-1.jpg" width="220" height="165" alt="first-item">
-          <h2>Набор для путешествий «Baxter of California»</h2>
-          <div class="item-price inline" href="#">2900 руб.</div>
-          <div class="btn inline"><a href="#">Купить</a></div>
-        </article>
-        <article class="item">
-          <img src="img/product-photo-2.jpg" width="220" height="165" alt="second-item">
-          <h2>Увлажняющий кондиционер «Baxter of California»</h2>
-          <div class="item-price inline" href="#">750 руб.</div>
-          <div class="btn inline"><a href="#">Купить</a></div>
-        </article> 
-        <article class="item no-margin">
-          <img src="img/product-photo-3.jpg" width="220" height="165" alt="third-item">
-          <h2>Гель для волос «SUAVECITO»</h2>
-          <div class="item-price inline" href="#">290 руб.</div>
-          <div class="btn inline"><a href="#">Купить</a></div>
-        </article> 
-        <article class="item">
-          <img src="img/product-photo-4.jpg" width="220" height="165" alt="fourth-item">
-          <h2>Глина для укладки волос «American crew»</h2>
-          <div class="item-price inline" href="#">500 руб.</div>
-          <div class="btn inline"><a href="#">Купить</a></div>
-        </article> 
-        <article class="item">
-          <img src="img/product-photo-5.jpg" width="220" height="165" alt="fifth-item">
-          <h2>Гель для волос «AMERICAN CREW</h2>
-          <div class="item-price inline" href="#">300 руб.</div>
-          <div class="btn inline"><a href="#">Купить</a></div>
-        </article> 
-        <article class="item no-margin">
-          <img src="img/product-photo-6.jpg" width="220" height="165" alt="sixth-item">
-          <h2>Набор для бритья
-«Baxter of California»</h2>
-          <div class="item-price inline" href="#">3900 руб.</div>
-          <div class="btn inline"><a href="#">Купить</a></div>
-        </article> 
-        <div class="pagination">
-		    	<ul>
-						<li><a href="#">1</a></li>
-						<li><a href="#">2</a></li>
-						<li><a href="#">3</a></li>
-						<li><a href="#">4</a></li>
-					</ul>			
-      	</div>
-     </div>
+								<input type="radio" id="first-group" name="groups" value="shaping accesories">
+								<label for="first-group">Бритвенные принадлежности</label>
+								<input type="radio" id="second-group" name="groups" value="goods for the care">
+								<label for="second-group">Средства для ухода</label>
+								<input type="radio" id="third-group" name="groups" value="accesories">
+								<label for="third-group">Аксессуары</label>       
+						</fieldset>
+						<input type="submit" value="Показать">						
+					</form>
+				</div>
+				<div class="products">
+					<div class="product-item">
+						<img src="img/product-photo-1.jpg" width="220" height="165" alt="first-item">
+						<h2 class="catalog-h2">
+							<a href="">Набор для путешествий <span class="product-name">«Baxter of California»</span></a>
+						</h2>
+						<div class="item-price inline" href="#">2900 руб.</div>
+						<div class="btn inline"><a href="#">Купить</a></div>
+					</div>
+					<div class="product-item">
+						<img src="img/product-photo-2.jpg" width="220" height="165" alt="second-item">
+						<h2 class="catalog-h2">
+							<a href="">Увлажняющий кондиционер <span class="product-name">«Baxter of California»</span></a>
+						</h2>
+						<div class="item-price inline" href="#">750 руб.</div>
+						<div class="btn inline"><a href="#">Купить</a></div>
+					</div> 
+					<div class="product-item">
+						<img src="img/product-photo-3.jpg" width="220" height="165" alt="third-item">
+						<h2 class="catalog-h2">
+							<a href="">Гель для волос <span class="product-name">«SUAVECITO»</span></a>
+						</h2>
+						<div class="item-price inline" href="#">290 руб.</div>
+						<div class="btn inline"><a href="#">Купить</a></div>
+					</div> 
+					<div class="product-item">
+						<img src="img/product-photo-4.jpg" width="220" height="165" alt="fourth-item">
+						<h2 class="catalog-h2">
+							<a href="">Глина для укладки волос <span class="product-name">«American crew»</span></a>
+						</h2>
+						<div class="item-price inline" href="#">500 руб.</div>
+						<div class="btn inline"><a href="#">Купить</a></div>
+					</div> 
+					<div class="product-item">
+						<img src="img/product-photo-5.jpg" width="220" height="165" alt="fifth-item">
+						<h2 class="catalog-h2">
+							<a href="">Гель для волос <span class="product-name">«AMERICAN CREW</span></a>
+						</h2>
+						<div class="item-price inline" href="#">300 руб.</div>
+						<div class="btn inline"><a href="#">Купить</a></div>
+					</div> 
+					<div class="product-item">
+						<img src="img/product-photo-6.jpg" width="220" height="165" alt="sixth-item">
+						<h2 class="catalog-h2">
+							<a href="">Набор для бритья <span class="product-name">«Baxter of California»</span></a>
+						</h2>
+						<div class="item-price inline" href="#">3900 руб.</div>
+						<div class="btn inline"><a href="#">Купить</a></div>
+					</div> 
+					<div class="pagination">
+						<ul>
+							<li><a href="#">1</a></li>
+							<li><a href="#">2</a></li>
+							<li><a href="#">3</a></li>
+							<li><a href="#">4</a></li>
+						</ul>			
+					</div>
+				</div>
+			</div>
     </main>
     <footer class="main-footer">
       <div class="container clearfix">
