Продолжение правки сетки барбершопа

--- a/catalog.html
+++ b/catalog.html
@@ -26,101 +26,103 @@
         </div>
       </div>
     </header>
-    <main class="container catalog-main">      
-      <h1 class="catalog-h1">Средства для ухода</h1>
-      <nav class="breadcrumbs">
-        <ul>
-          <li><a href="#">Главная</a></li>
-          <li><a href="#">Магазин</a></li>
-          <li><a href="#">Средства для ухода</a></li>
-        </ul>
-      </nav>
-      <div class="content clearfix">    
-				<div class="product-features">        
-					<form  action="" method="">        
-						<fieldset>
-							<legend>Производители:</legend>
-							<input type="checkbox" id="first-producer" name="first-producer" checked>
-							<label for="first-producer">Baxter of California</label>
-							<input type="checkbox" id="second-producer" name="second-producer">
-							<label for="second-producer">Mr Natty</label>
-							<input type="checkbox" id="third-producer" name="third-producer" checked>
-							<label for="third-producer">Suavecito</label>
-							<input type="checkbox" id="fourth-producer" name="fourth-producer">
-							<label for="fourth-producer">Malin+Goetz</label>
-							<input type="checkbox" id="fifth-producer" name="fifth-producer">
-							<label for="fifth-producer">Murray's</label>
-							<input type="checkbox" id="sixth-producer" name="sixth-producer" checked>
-							<label for="sixth-producer">American Crew</label>
-						</fieldset>                              
-						<fieldset>       
-							<legend>Группы товаров:</legend>
-								<input type="radio" id="first-group" name="groups" value="shaping accesories">
-								<label for="first-group">Бритвенные принадлежности</label>
-								<input type="radio" id="second-group" name="groups" value="goods for the care">
-								<label for="second-group">Средства для ухода</label>
-								<input type="radio" id="third-group" name="groups" value="accesories">
-								<label for="third-group">Аксессуары</label>       
-						</fieldset>
-						<input type="submit" value="Показать">						
-					</form>
-				</div>
-				<div class="products">
-					<div class="product-item">
-						<img src="img/product-photo-1.jpg" width="220" height="165" alt="first-item">
-						<h2 class="catalog-h2">
-							<a href="">Набор для путешествий <span class="product-name">«Baxter of California»</span></a>
-						</h2>
-						<div class="item-price inline" href="#">2900 руб.</div>
-						<div class="btn inline"><a href="#">Купить</a></div>
+    <main class="catalog-main">
+    	<div class="container">      
+				<h1 class="catalog-h1">Средства для ухода</h1>
+				<nav class="breadcrumbs">
+					<ul>
+						<li><a href="#">Главная</a></li>
+						<li><a href="#">Магазин</a></li>
+						<li><a href="#">Средства для ухода</a></li>
+					</ul>
+				</nav>
+				<div class="content clearfix">    
+					<div class="product-features">        
+						<form  action="" method="">        
+							<fieldset>
+								<legend>Производители:</legend>
+								<input type="checkbox" id="first-producer" name="first-producer" checked>
+								<label for="first-producer">Baxter of California</label>
+								<input type="checkbox" id="second-producer" name="second-producer">
+								<label for="second-producer">Mr Natty</label>
+								<input type="checkbox" id="third-producer" name="third-producer" checked>
+								<label for="third-producer">Suavecito</label>
+								<input type="checkbox" id="fourth-producer" name="fourth-producer">
+								<label for="fourth-producer">Malin+Goetz</label>
+								<input type="checkbox" id="fifth-producer" name="fifth-producer">
+								<label for="fifth-producer">Murray's</label>
+								<input type="checkbox" id="sixth-producer" name="sixth-producer" checked>
+								<label for="sixth-producer">American Crew</label>
+							</fieldset>                              
+							<fieldset>       
+								<legend>Группы товаров:</legend>
+									<input type="radio" id="first-group" name="groups" value="shaping accesories">
+									<label for="first-group">Бритвенные принадлежности</label>
+									<input type="radio" id="second-group" name="groups" value="goods for the care">
+									<label for="second-group">Средства для ухода</label>
+									<input type="radio" id="third-group" name="groups" value="accesories">
+									<label for="third-group">Аксессуары</label>       
+							</fieldset>
+							<input type="submit" value="Показать">						
+						</form>
 					</div>
-					<div class="product-item">
-						<img src="img/product-photo-2.jpg" width="220" height="165" alt="second-item">
-						<h2 class="catalog-h2">
-							<a href="">Увлажняющий кондиционер <span class="product-name">«Baxter of California»</span></a>
-						</h2>
-						<div class="item-price inline" href="#">750 руб.</div>
-						<div class="btn inline"><a href="#">Купить</a></div>
-					</div> 
-					<div class="product-item">
-						<img src="img/product-photo-3.jpg" width="220" height="165" alt="third-item">
-						<h2 class="catalog-h2">
-							<a href="">Гель для волос <span class="product-name">«SUAVECITO»</span></a>
-						</h2>
-						<div class="item-price inline" href="#">290 руб.</div>
-						<div class="btn inline"><a href="#">Купить</a></div>
-					</div> 
-					<div class="product-item">
-						<img src="img/product-photo-4.jpg" width="220" height="165" alt="fourth-item">
-						<h2 class="catalog-h2">
-							<a href="">Глина для укладки волос <span class="product-name">«American crew»</span></a>
-						</h2>
-						<div class="item-price inline" href="#">500 руб.</div>
-						<div class="btn inline"><a href="#">Купить</a></div>
-					</div> 
-					<div class="product-item">
-						<img src="img/product-photo-5.jpg" width="220" height="165" alt="fifth-item">
-						<h2 class="catalog-h2">
-							<a href="">Гель для волос <span class="product-name">«AMERICAN CREW</span></a>
-						</h2>
-						<div class="item-price inline" href="#">300 руб.</div>
-						<div class="btn inline"><a href="#">Купить</a></div>
-					</div> 
-					<div class="product-item">
-						<img src="img/product-photo-6.jpg" width="220" height="165" alt="sixth-item">
-						<h2 class="catalog-h2">
-							<a href="">Набор для бритья <span class="product-name">«Baxter of California»</span></a>
-						</h2>
-						<div class="item-price inline" href="#">3900 руб.</div>
-						<div class="btn inline"><a href="#">Купить</a></div>
-					</div> 
-					<div class="pagination">
-						<ul>
-							<li><a href="#">1</a></li>
-							<li><a href="#">2</a></li>
-							<li><a href="#">3</a></li>
-							<li><a href="#">4</a></li>
-						</ul>			
+					<div class="products">
+						<div class="product-item">
+							<img src="img/product-photo-1.jpg" width="220" height="165" alt="first-item">
+							<h2 class="catalog-h2">
+								<a href="">Набор для путешествий <span class="product-name">«Baxter of California»</span></a>
+							</h2>
+							<div class="item-price" href="#">2900 руб.</div>
+							<a class="buy-btn" href="#">Купить</a>
+						</div>
+						<div class="product-item">
+							<img src="img/product-photo-2.jpg" width="220" height="165" alt="second-item">
+							<h2 class="catalog-h2">
+								<a href="">Увлажняющий кондиционер <span class="product-name">«Baxter of California»</span></a>
+							</h2>
+							<div class="item-price" href="#">750 руб.</div>
+							<a class="buy-btn" href="#">Купить</a>
+						</div> 
+						<div class="product-item">
+							<img src="img/product-photo-3.jpg" width="220" height="165" alt="third-item">
+							<h2 class="catalog-h2">
+								<a href="">Гель для волос <span class="product-name">«SUAVECITO»</span></a>
+							</h2>
+							<div class="item-price" href="#">290 руб.</div>
+							<a class="buy-btn" href="#">Купить</a>
+						</div> 
+						<div class="product-item">
+							<img src="img/product-photo-4.jpg" width="220" height="165" alt="fourth-item">
+							<h2 class="catalog-h2">
+								<a href="">Глина для укладки волос <span class="product-name">«American crew»</span></a>
+							</h2>
+							<div class="item-price" href="#">500 руб.</div>
+							<a class="buy-btn" href="#">Купить</a>
+						</div> 
+						<div class="product-item">
+							<img src="img/product-photo-5.jpg" width="220" height="165" alt="fifth-item">
+							<h2 class="catalog-h2">
+								<a href="">Гель для волос <span class="product-name">«AMERICAN CREW»</span></a>
+							</h2>
+							<div class="item-price" href="#">300 руб.</div>
+							<a class="buy-btn" href="#">Купить</a>
+						</div> 
+						<div class="product-item">
+							<img src="img/product-photo-6.jpg" width="220" height="165" alt="sixth-item">
+							<h2 class="catalog-h2">
+								<a href="">Набор для бритья <span class="product-name">«Baxter of California»</span></a>
+							</h2>
+							<div class="item-price" href="#">3900 руб.</div>
+							<a class="buy-btn" href="#">Купить</a>
+						</div> 
+						<div class="pagination">
+							<ul>
+								<li><a href="#">1</a></li>
+								<li><a href="#">2</a></li>
+								<li><a href="#">3</a></li>
+								<li><a href="#">4</a></li>
+							</ul>			
+						</div>
 					</div>
 				</div>
 			</div>
@@ -135,9 +137,9 @@
         </section>
         <section class="footer-social">
           <p>Давайте дружить!</p>
-          <a class="social-btn social-btn-vk" href="#"><img src="img/vk-icon.png" width="25" height="15" alt=""></a>
-          <a class="social-btn social-btn-fb" href="#"><img src="img/fb-icon.png" width="25" height="15" alt=""></a>
-          <a class="social-btn social-btn-inst" href="#"><img src="img/inst-icon.png" width="25" height="15" alt=""></a>
+          <a class="social-btn social-btn-vk" href="#"><img src="img/vk-icon.png" width="25" height="16" alt=""></a>
+          <a class="social-btn social-btn-fb" href="#"><img src="img/fb-icon.png" width="12" height="22" alt=""></a>
+          <a class="social-btn social-btn-inst" href="#"><img src="img/inst-icon.png" width="21" height="21" alt=""></a>
         </section>
         <section class="footer-copyright">
           <p>Разработано:</p>
