--- a/catalog-item.html
+++ b/catalog-item.html
@@ -9,7 +9,7 @@
     <header class="second-header">
       <div class="container">
         <div class="main-logo">
-          <img src="img/Logo.png" width="111" height="13"   alt="Barbershop">
+          <img src="img/logo.png" width="111" height="24"   alt="Barbershop">
         </div>
         <nav class="main-navigation next-page-navigation">
           <ul>
@@ -20,7 +20,7 @@
             <li><a href="#">Контакты</a></li>
           </ul> 
         </nav>
-        <div class="login-block">
+        <div class="user-block">
           <a class="login" href="#">Вход</a>
         </div>
       </div>
@@ -78,9 +78,9 @@
         </section>
         <section class="footer-social">
           <p>Давайте дружить!</p>
-          <a class="social-btn social-btn-vk" href="#"><img src="img/vk-icon.png" width="25" height="15" alt=""></a>
-          <a class="social-btn social-btn-fb" href="#"><img src="img/fb-icon.png" width="25" height="15" alt=""></a>
-          <a class="social-btn social-btn-inst" href="#"><img src="img/inst-icon.png" width="25" height="15" alt=""></a>
+          <a class="social-btn social-btn-vk" href="#"><img src="img/vk-icon.png" width="25" height="16" alt=""></a>
+          <a class="social-btn social-btn-fb" href="#"><img src="img/fb-icon.png" width="12" height="21" alt=""></a>
+          <a class="social-btn social-btn-inst" href="#"><img src="img/inst-icon.png" width="21" height="21" alt=""></a>
         </section>
         <section class="footer-copyright">
           <p>Разработано:</p>
