--- a/catalog-item.html
+++ b/catalog-item.html
@@ -4,20 +4,21 @@
     <meta charset="utf-8">
     <title>HTML Academy: Барбершоп</title>
     <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
   </head>
   <body>
     <header class="second-header">
-      <div class="container">
+      <div class="container clearfix">
         <div class="main-logo">
           <img src="img/logo.png" width="111" height="24"   alt="Barbershop">
         </div>
         <nav class="main-navigation next-page-navigation">
-          <ul>
-            <li><a href="#">Информация</a></li>
-            <li><a href="#">Новости</a></li>
-            <li><a href="#">Прайс-лист</a></li>
-            <li><a href="#">Магазин</a></li>
-            <li><a href="#">Контакты</a></li>
+          <ul class="main-navigation-list">
+            <li class="main-navigation-li"><a href="#">Информация</a></li>
+            <li class="main-navigation-li"><a href="#">Новости</a></li>
+            <li class="main-navigation-li"><a href="#">Прайс-лист</a></li>
+            <li class="main-navigation-li"><a href="#">Магазин</a></li>
+            <li class="main-navigation-li"><a href="#">Контакты</a></li>
           </ul> 
         </nav>
         <div class="user-block">
@@ -25,48 +26,50 @@
         </div>
       </div>
     </header>
-    <main class="container">     
-      <h1>Набор для путешествий «Baxter of California»</h1>
-      <nav class="breadcrumbs">
-        <ul>
-          <li><a href="#">Главная</a></li>
-          <li><a href="#">Магазин</a></li>
-          <li><a href="#">Средства для ухода</a></li>
-          <li><a href="#">Набор для путешествий «Baxter of California»</a></li>
-        </ul>
-      </nav>
-      <div class="item-photos">
-        <div class="item-photo-small">
-        	<img src="img/big-item-photo.jpg" width="460" height="498" alt="big-photo">
+    <main class="catalog-main">
+     <div class="container clearfix">   
+				<h1 class="catalog-h1">Набор для путешествий «Baxter of California»</h1>
+				<nav class="breadcrumbs">
+					<ul class="breadcrumbs-list">
+						<li class="breadcrumbs-li"><a href="#">Главная</a></li>
+						<li class="breadcrumbs-li"><a href="#">Магазин</a></li>
+						<li class="breadcrumbs-li"><a href="#">Средства для ухода</a></li>
+						<li class="breadcrumbs-li"><a href="#">Набор для путешествий «Baxter of California»</a></li>
+					</ul>
+				</nav>
+				<div class="item-photos">
+					<div class="item-photo-big">
+						<img src="img/big-item-photo.jpg" width="460" height="498" alt="big-photo">
+					</div>
+					<div class="item-photos-small">
+						<img src="img/small-item-photo-1.jpg" width="140" height="149" alt="first-small-photo">
+						<img src="img/small-item-photo-2.jpg" width="140" height="149" alt="second-small-photo">
+						<img src="img/small-item-photo-3.jpg" width="140" height="149" alt="third-small-photo">
+					</div>
 				</div>
-        <div class="item-photos-small">
-					<img src="img/small-item-photo-1.jpg" width="140" height="149" alt="first-small-photo">
-					<img src="img/small-item-photo-2.jpg" width="140" height="149" alt="second-small-photo">
-					<img src="img/small-item-photo-3.jpg" width="140" height="149" alt="third-small-photo">
-        </div>
-      </div>
-      <div class="item-features">
-        <div class="order-info">
-          <span class="item-existance">Есть в наличие</span>
-          <span class="item-article">Артикул: DEXTER-AE</span>
-        </div>
-        <article class="item-description">
-          <p>Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.
-          </p>
-          <div class="item-price">2900 руб.</div>
-          <div class="btn inline"><a href="#">Купить</a></div>
-        </article>
-        <section class="item-kit">
-          <h2>В набор входят:</h2>
-          <ul>
-              <li>Средство для умывания (50 мл)</li>
-              <li>Увлажняющий крем (50 мл)</li>
-              <li>Крем для бритья (50 мл)</li>
-              <li>Крем после бритья, шампунь (50 мл)</li>
-              <li>Удобная кожаная косметичка</li>
-          </ul>
-        </section>
-      </div>     
+				<div class="item-features">
+					<div class="order-info clearfix">
+						<span class="item-existance">Есть в наличие</span>
+						<span class="item-article">Артикул: DEXTER-AE</span>
+					</div>
+					<article class="item-description">
+						<p class="item-description-p">Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.
+						</p>
+						<div class="item-price">2900 руб.</div>
+						<a class="buy-btn" href="#">Купить</a>
+					</article>
+					<section class="item-kit">
+						<h2 class="catalog-item-h2">В набор входят:</h2>
+						<ul class="item-kit-list">
+								<li class="item-kit-li">Средство для умывания (50 мл)</li>
+								<li class="item-kit-li">Увлажняющий крем (50 мл)</li>
+								<li class="item-kit-li">Крем для бритья (50 мл)</li>
+								<li class="item-kit-li">Крем после бритья, шампунь (50 мл)</li>
+								<li class="item-kit-li">Удобная кожаная косметичка</li>
+						</ul>
+					</section>
+				</div>
+			</div>     
     </main>
     <footer class="main-footer">
       <div class="container clearfix">
