--- a/catalog.html
+++ b/catalog.html
@@ -13,12 +13,12 @@
           <img src="img/logo.png" width="111" height="24"   alt="Barbershop">
         </div>
         <nav class="main-navigation next-page-navigation">
-          <ul>
-            <li><a href="#">Информация</a></li>
-            <li><a href="#">Новости</a></li>
-            <li><a href="#">Прайс-лист</a></li>
-            <li><a href="#">Магазин</a></li>
-            <li><a href="#">Контакты</a></li>
+          <ul class="main-navigation-list">
+            <li class="main-navigation-li"><a href="#">Информация</a></li>
+            <li class="main-navigation-li"><a href="#">Новости</a></li>
+            <li class="main-navigation-li"><a href="#">Прайс-лист</a></li>
+            <li class="main-navigation-li"><a href="#">Магазин</a></li>
+            <li class="main-navigation-li"><a href="#">Контакты</a></li>
           </ul> 
         </nav>
         <div class="user-block">
@@ -30,10 +30,10 @@
     	<div class="container">      
 				<h1 class="catalog-h1">Средства для ухода</h1>
 				<nav class="breadcrumbs">
-					<ul>
-						<li><a href="#">Главная</a></li>
-						<li><a href="#">Магазин</a></li>
-						<li><a href="#">Средства для ухода</a></li>
+					<ul class="breadcrumbs-list">
+						<li class="breadcrumbs-li"><a href="#">Главная</a></li>
+						<li class="breadcrumbs-li"><a href="#">Магазин</a></li>
+						<li class="breadcrumbs-li"><a href="#">Средства для ухода</a></li>
 					</ul>
 				</nav>
 				<div class="content clearfix">    
@@ -116,11 +116,11 @@
 							<a class="buy-btn" href="#">Купить</a>
 						</div> 
 						<div class="pagination">
-							<ul>
-								<li><a href="#">1</a></li>
-								<li><a href="#">2</a></li>
-								<li><a href="#">3</a></li>
-								<li><a href="#">4</a></li>
+							<ul class="pagination-list">
+								<li class="pagination-li"><a href="#">1</a></li>
+								<li class="pagination-li"><a href="#">2</a></li>
+								<li class="pagination-li"><a href="#">3</a></li>
+								<li class="pagination-li"><a href="#">4</a></li>
 							</ul>			
 						</div>
 					</div>
