--- a/catalog-item.html
+++ b/catalog-item.html
@@ -2,10 +2,10 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Барбершоп</title>
+    <title>Барбершоп «Бородинский»: Набор для путешествия «BAXTER OF CALIFORNIA»</title>
 	 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=latin,cyrillic">
     <link rel="stylesheet" href="css/normalize.css">
-    <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/style-min.css">
   </head>
   <body class="inner-page">
     <header class="main-header">
@@ -21,11 +21,11 @@
             <li>
               <a href="#">Новости</a>
             </li>
-            <li class="active">
-              <span>Прайс-лист</span>
-            </li>
             <li>
-              <a href="#">Магазин</a>
+              <a href="price.html">Прайс-лист</a>
+            </li>
+            <li class="active">
+              <span>Магазин</span>
             </li>
             <li>
               <a href="#">Контакты</a>
